manifests/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: webapp
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  strategy: {}
  template:
    metadata:
      annotations:
        app: webapp
      labels:
        app: webapp
        version: v1
    spec:
      containers:
      - image: quay.io/yono/yolov8-demo:1.0
        imagePullPolicy: IfNotPresent
        name: flask-server
        ports:
        - containerPort: 5000
          protocol: TCP
        securityContext:
          privileged: true
      restartPolicy: Always
      serviceAccount: webapp
      serviceAccountName: webapp
