manifests/webapp/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  type: NodePort
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 32280
  selector:
    app: webapp
